--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
+    "react-redux": "^5.0.7",
+    "react-redux-form": "^1.16.8",
     "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
+    "redux": "^3.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
