--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "font-awesome": "^4.7.0",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.8",
     "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
